tests/res/assignment/error_lvalue_fn.say
fn hello() {
    return "hello";
}
fn world() {
    return "world";
}
hello = world; // error: Invalid assignment: 'hello' is immutable